<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lista de Contactos</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contact">Add Contact</string>
	<string name="first_name">First</string>
    <string name="last_name">Last Name</string>
	<string name="phone_number">Phone</string>
    <string name="email_addres">E-Mail</string>
	<string name="home_addres">Address</string>
	<string name="action_settings">Settings</string>
    <string name="contacts_title">Contactos</string>
	<string name="add_button">ADD</string>
    <string name="edit_contact_title">Edit Contact</string>
	<string name="edit_button">Edit</string>
	<string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="login_button">Login</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="agregar_carrito_button">Agregar al Carrito</string>
    <string name="ver_button">Ver</string>
    <string name="nombre_producto">Nombre :</string>
    <string name="talla_producto">Talla :</string>
    <string name="color_producto">Color :</string>
    <string name="precio_producto">Precio :</string>
    <string name="cantidad_producto">Cantidad :</string>
    <string name="tipo_producto">Tipo:</string>
    <string name="add_carrito_title">Agregar Producto</string>
    <string name="carrito_link">Carrito de Compras</string>
    <string name="carrito_title">Carrito</string>
    <string name="sincronizar_button">Sincronizar</string>
    <string name="comprar_button">Comprar</string>
    <string name="total">Total :</string>
    <string name="regresa">Regresar</string>
    <string name="reporte">Reporte</string>
    
    
	
</resources>
