<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <TableRow
    
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
         >
        
        <TextView
            android:id="@+id/contactsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/carrito_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/contactButton"
            android:layout_weight="1"
            android:onClick="regresar"
            android:text="@string/regresa"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </TableRow>
      <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/comprarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="comprarCarrito"
            android:text="@string/comprar_button" />

    </TableRow>
    
      <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sincronizarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="sincronizarCarrito"
            android:text="@string/sincronizar_button" />

    </TableRow>
        <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"
            android:text="@string/total" />

        <EditText
            android:id="@+id/totalcarritoEdittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:padding="@dimen/padding_5dp" >

            <requestFocus />
        </EditText>

    </TableRow>    
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             >
        </ListView>

    </TableRow>

    
</TableLayout>
