<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<TableRow
        
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
         >
        
        <TextView
            android:id="@+id/contactsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/carrito_link"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/contactButton"
            android:onClick="showCarrito"
            android:text="@string/ver_button"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </TableRow>
	<TableRow
        
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
         >
        
        <TextView
            android:id="@+id/reportesTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_5dp"
            android:layout_weight="1"
            android:text="@string/reporte"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/reporteButton"
            android:onClick="showReporte"
            android:text="@string/ver_button"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             >
        </ListView>

    </TableRow>
    
</TableLayout>
